# declare-id-test

./: .gitignore  Anchor.toml  NOTES.md  README.md
programs/declare-id-test/: Cargo.toml
programs/declare-id-test/src/: lib.rs
tests/: declare-id-test.ts
